<resources>
    <string name="app_name">ChatApp</string>
    <string name="hello_instagram">Hello Instagram</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="forget_password">forget password?</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New User ? Sign Up</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="username">username</string>
    <string name="sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="chat">Chat</string>
    <string name="status">Status</string>
    <string name="account_photo">account photo</string>
    <string name="abdlerahman">Abdlerahman</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="search">Search</string>
    <string name="write_your_message">write your message</string>
    <string name="message">message</string>
    <string name="hello">Hello!</string>
    <string name="abdrlrahman" />
    <string name="abdrlrahmaan">Abdelrahman</string>
</resources>
