<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
      <item
          android:title="@string/search"
          android:id="@+id/search"
          android:icon="@drawable/baseline_search_black_24dp"
          app:showAsAction="always|collapseActionView"
          app:actionViewClass="androidx.appcompat.widget.SearchView"
          
          />
    <item
        android:title="@string/profile"
        android:id="@+id/profile"
        app:showAsAction="never"
        />
   
    <item
        android:title="@string/groups"
        android:id="@+id/groups"
        app:showAsAction="never"
        />
    <item
        android:title="@string/settings"
        android:id="@+id/settings"
        app:showAsAction="never"
        />
    <item
        android:title="@string/logout"
        android:id="@+id/logout"
        app:showAsAction="never"
        />

</menu>