<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="70dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar">
 <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" >

       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/image_friend_msg_toolbar"
           android:layout_width="35dp"
           android:layout_height="35dp"
           android:src="@drawable/bara1"/>
       <TextView
           android:id="@+id/user_name_friend_toolbar"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/abdlerahman"
           android:textSize="18sp"
           android:textStyle="bold"
           android:layout_toEndOf="@id/image_friend_msg_toolbar"
           android:padding="10dp"
           android:textColor="@color/white"
           />
 </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:id="@+id/recycler_msg"
        android:scrollbars="vertical"
        android:layout_above="@id/relative_lay"
        />
      <RelativeLayout
          android:id="@+id/relative_lay"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:background="@color/white"
          android:padding="5dp"
          >
    <EditText
        android:id="@+id/write_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/send_btn"
        android:layout_centerVertical="true"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:hint="@string/write_your_message"
        android:autofillHints="write your message"
        android:inputType="text" />
          <ImageButton
              android:layout_width="40dp"
              android:layout_height="40dp"
              android:id="@+id/send_btn"
              android:layout_centerVertical="true"
              android:layout_alignParentEnd="true"
               android:scaleType="centerCrop"
              android:background="@drawable/baseline_send_black_24dp"
              android:padding="5dp"
              android:contentDescription="@string/message" />
      </RelativeLayout>
   


</RelativeLayout>